
# FIXME use this once split out
# themedir = $(pkgdatadir)/theme
themedir = $(datadir)/moblin-panel-applications/theme
dist_theme_DATA = \
	toolbar-button.css \
	apps-coloured.png \
	apps-normal.png \
	\
	panel.css \
	launcher-button-fav-toggle-active.png \
	launcher-button-fav-toggle-checked.png \
	launcher-button-fav-toggle-hover.png \
	launcher-button-fav-toggle.png \
	launcher-hover.png \
	launcher-search-bg.png

