
# FIXME use this once split out
# themedir = $(MUTTER_MOBLIN_THEME_DIR)/$(PACKAGE_NAME)
themedir = $(MUTTER_MOBLIN_THEME_DIR)/moblin-panel-applications
dist_theme_DATA = \
	toolbar-button.css \
	apps-coloured.png \
	apps-normal.png \
	\
	panel.css \
	launcher-button-fav-toggle-active.png \
	launcher-button-fav-toggle-checked.png \
	launcher-button-fav-toggle-hover.png \
	launcher-button-fav-toggle.png \
	launcher-hover.png \
	launcher-search-bg.png

