libexec_PROGRAMS = carrick-openconnect-dialog

carrick_openconnect_dialog_SOURCES = \
	main.c \
	auth-dlg-settings.h \
	$(NULL)

carrick_openconnect_dialog_CFLAGS = \
	$(CALLOUTS_CFLAGS) \
	$(OPENCONNECT_CFLAGS) \
	-Wall \
	$(NULL)

carrick_openconnect_dialog_LDADD = \
	$(CALLOUTS_LIBS) \
	$(OPENCONNECT_LIBS) \
	$(NULL)
